fixes player info container no collapsing

--- a/app/themes/waterboys/styles/bundle.css
+++ b/app/themes/waterboys/styles/bundle.css
@@ -1002,9 +1002,9 @@ Example showing how to change the color/size of the icons:
 
 .wb__content-info {
   -webkit-box-flex: 2;
-  -webkit-flex: 2 1 30%;
-      -ms-flex: 2 1 30%;
-          flex: 2 1 30%;
+  -webkit-flex: 2 1 auto;
+      -ms-flex: 2 1 auto;
+          flex: 2 1 auto;
   min-width: 330px;
   background-color: #f0f0ef;
   font-weight: 700;
